# mpi-bm

./: .gitignore  .nodes.txt.swp  .valgrindrc  README  alloctest  alloctest.cpp  hellow.c  nodes.txt  val.supp
0mq/: .zmqbenchmark.in.swp  Makefile  client  client.cpp  helloworld.cpp  helloworld_client  helloworld_client.cpp  helloworld_server  helloworld_server.cpp  server  server.cpp  string.h  teststringsize  teststringsize.cpp  timestamp.h  zmqbenchmark.conf
500/: .500.cpp.swo  .500.cpp.swp  500.cpp  500_1.out  500_1024.out  500_1024MB.out  500_10GB.out  500_128.out  500_16.csv  500_16384MB.out  500_1MB.out  500_2.csv  500_2.out  500_2048.out  500_256.out  500_2MB.out  500_32.out  500_32MB.out  500_4096.out  500_4MB.out  500_512.csv  500_64.csv  500_64.out  500_8MB.out  inputgenerator  inputgenerator500.cpp  mist  slurm_128MB.cpp  slurm_16384MB.cpp  slurm_1MB.cpp  slurm_2048MB.cpp  slurm_2MB.cpp  slurm_32768MB.cpp  slurm_4096MB.cpp  slurm_4MB.cpp  slurm_64MB.cpp  slurm_8MB.cpp
501/: format_to_csv.py  inputgenerator501.cpp  slurm_1024kB.cpp  slurm_16kB.cpp  slurm_256kB.cpp  slurm_32768kB.cpp  slurm_4kB.cpp  slurm_512kB.cpp  slurm_64kB.cpp  slurm_8192kB.cpp  slurm_8kB.cpp
502/: 502.cpp  cputime.h  cputime1.h  inputgenerator502  inputgenerator502.cpp  slurm_1024kB.cpp  slurm_16384kB.cpp  slurm_16kB.cpp  slurm_1kB.cpp  slurm_2048kB.cpp  slurm_256kB.cpp  slurm_32kB.cpp  slurm_4096kB.cpp  slurm_4kB.cpp  slurm_512kB.cpp  slurm_64kB.cpp  slurm_8192kB.cpp  slurm_8kB.cpp
503/: 503  503.cpp  inputgenerator503  plotcsv  readout.py  slurm_1024B.cpp  slurm_131072B.cpp  (+9 more)
basic-mpi-bm/: CMakeLists.txt  dataManager.cpp  dataManager.h  main  main.cpp  parameters.cpp  parameters.h  result.cpp
lse-mpi-bm/: CMakeLists.txt  buffer.cpp  buffer.h  communicationManager.cpp  communicationManager.h  lse-mpi-bm.cpp  measurement.cpp  measurement.h  multinodes.cpp  parameters.cpp  parameters.h  results.cpp  results.h  runbm.sh  runbm_print.sh  timestamp.h
lse-mpi-bm/run/: run.slurm
lse-mpi-bm/src/: lse-mpi-bm.cpp  measurement.cpp  output.h  parameters.cpp  parameters.h  results.cpp  results.h  tsc.h
mpi-fault-tolerance/: CMakeLists.txt
mpi-fault-tolerance/src/: addfunctions.cpp  main.cpp
multinodes/: .CMakeLists.txt.swp  ._buffer.cpp  ._buffer.h  ._multinodes.cpp  ._results.cpp  CMakeLists.txt  addfunctions.cpp  buffer.cpp  buffer.h  ib_write_bw.sh  measurement.cpp  measurement.h  multinodes.cpp  multipleib_write_bw.sh  myib_write_bw.sh  nodelist.txt  output.h  parameters.cpp  parameters.h  pinning.h  results.cpp  results.h  runbm.sh  runbm_anytoany.sh  runbm_anytoany_ibtest.sh  runbm_onetoany.sh  runbm_onetoanyinone.sh  sendin.sh  sendmultinodes.sh  sendmultipnodesmulticore.sh  sendmultipnodesmulticorewithtest.sh  sendwarmups.sh  single.sh  slurmib_write_bw.sh
sendrecv/: ._2.in  ._CMakeLists.txt  ._bandwidthcalc.cpp  ._bandwidthcalc.h  ._buffer.cpp  ._buffer.h  ._bufferoperations.cpp  ._bufferoperations.h  ._calculatebandwidth.h  ._classmpi3.cpp  ._classmpi3.h  ._iterations.cpp  ._method.h  ._modulo.cpp  ._multinodes.cpp  ._parameters.cpp  ._parameters.h  ._pingpong.cpp  ._pingpongsave.cpp  ._pipeline.cpp  ._pipeline.sh  ._plotout.sh  ._print.cpp  ._print.h  ._results.cpp  ._results.h  ._send.in  ._sendin.sh  ._sendinput.sh  ._sendrecv.cpp  ._sendrecv2.cpp  ._single.sh  ._singlesend.sh  ._slurm_Ssend.in  ._slurm_send.in  ._slurm_test.in  ._test.cpp  ._test.in  ._totaldatasendcalc.cpp  ._totaldatasendcalc.h  (+72 more)
sendrecv/1/: Ssend.out  test.out
sendrecv/2/: Bsend.out  Ssend.out  send.out  test.out
sendrecv/3/: Bsend.out  Ssend.out  send.out
sendrecv/4/: Bsend.out  Ssend.out  send.out  send2.out  test.out
sendrecv/run/: pipeline.sh  plotout.sh  single.sh
sendrecv/single/: getresult.sh
sendrecv/src/: buffer.cpp  buffer.h  parameters.h
sendrecv/test/: test3.out
(+1117 files in other folders)
